Adapt app to new error handler  * make base provider behavior parse errors  * adapt iron-ajax wrapper(coduno-iron-ajax) to be used for post/put requests with error handling incorporated  * replace iron-ajax with coduno-iron-ajax where approprivate  * rework error page to suit multiple errors(500, 403, 404)

--- a/app/elements/admin/import-catcoder-input.html
+++ b/app/elements/admin/import-catcoder-input.html
@@ -2,25 +2,43 @@
 <link rel="import" href="../../bower_components/iron-ajax/iron-ajax.html">
 <link rel="import" href="../../bower_components/paper-toast/paper-toast.html">
 
+<link rel="import" href="../common/error/errors-display.html">
+<link rel="import" href="../common/coduno-iron-ajax.html">
+
 <dom-module id="import-catcoder-input">
 	<template>
-		<iron-ajax
+		<style>
+			paper-button {
+				margin: 8px 4px ;
+			}
+		</style>
+		<coduno-iron-ajax
 			id="postGame"
 			method="POST"
-			with-credentials="true"
+			body="{{body}}"
+			suffix="/contestgameupload"
+			content-type=""
+			response="{{savedTemplate}}"
 			on-response="_onResponse"
 			on-error="_onError">
-		</iron-ajax>
+		</coduno-iron-ajax>
 
+		<errors-display error="{{error}}"></errors-display>
 		You must upload a zip file which contains the game structure
 		<input id="input" type="file" accept="application/zip"><br>
-
-		<paper-button id="uploadButton" on-click="_upload">Upload game</paper-button>
+		<paper-button id="uploadButton" raised on-click="_upload">Upload game</paper-button>
 		<paper-toast id="toast">{{toastText}}</paper-toast>
 	</template>
 	<script>
 		Polymer({
 			is: 'import-catcoder-input',
+			properties: {
+				body: {
+					type: Object,
+					notify: true
+				}
+			},
+
 			_upload: function(){
 				if (this.$.input.files.length === 0){
 					this.toastText = 'You must upload a zip file.';
@@ -28,29 +46,22 @@
 					return;
 				}
 				var file = this.$.input.files[0];
-				var body = new FormData();
-				body.append('file', file, file.name);
-				body.append('organization', localStorage.activeOrganization);
-				this.$.postGame.body = body;
-				this.$.postGame.url = util.build('/contestgameupload');
-				this.$.postGame.generateRequest();
+				this.body = new FormData();
+				this.body.append('file', file, file.name);
+				this.body.append('organization', localStorage.activeOrganization);
 				app.startLoading();
 				this.$.uploadButton.disabled = true;
+				this.$.postGame.generateRequest();
 			},
-			_onResponse: function(r){
-				this.$.uploadButton.disabled = true;
+			_onResponse: function(event, r){
+				this.$.uploadButton.disabled = false;
 				app.stopLoading();
-				page('/challenges/template/' + r.detail.response);
+				console.log(this.savedTemplate);
+				page('/challenges/template/' + this.savedTemplate);
 			},
 			_onError: function(e, req) {
-				this.$.uploadButton.disabled = true;
 				app.stopLoading();
-				if (e.detail.request.xhr.status === 400) {
-					this.toastText = req.request.xhr.response;
-					this.$.toast.show();
-					return;
-				}
-				util.error(e);
+				this.$.uploadButton.disabled = false;
 			}
 		});
 	</script>
