--- a/app/elements/common/settings/change-password-dialog.html
+++ b/app/elements/common/settings/change-password-dialog.html
@@ -7,6 +7,9 @@
 <link rel="import" href="../../../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../../../bower_components/iron-form/iron-form.html">
 
+<link rel="import" href="../../common/error/errors-display.html">
+<link rel="import" href="../../common/coduno-iron-ajax.html">
+
 <dom-module id="change-password-dialog">
 	<style include="iron-flex iron-flex-reverse">
 		.fieldList {
@@ -17,19 +20,19 @@
 		}
 	</style>
 	<template>
-		<iron-ajax
+		<coduno-iron-ajax
 			id="savePasswordRequest"
 			method="PUT"
-			handle-as="text"
-			content-type="application/json"
-			with-credentials="true"
+			suffix="/user/password"
+			body="{{password}}"
 			on-response="_onResponse"
-			on-error="_onError">
-		</iron-ajax>
-			<match-password other-password="[[password.newPassword]]" validator-name="match-password-validator"></match-password>
+			error="{{error}}">
+		</coduno-iron-ajax>
+		<match-password other-password="[[password.newPassword]]" validator-name="match-password-validator"></match-password>
 		<paper-dialog id="changePasswordDialog" style="background: white;" modal>
 			<h4>Change password</h4>
 			<div class="fieldList">
+				<errors-display error="{{error}}"></errors-display>
 				<form is="iron-form" id="form">
 					<paper-input type="password" autofocus="true" label="Current" value="{{password.oldPassword}}"
 						required minlength="6" maxlength="40" auto-validate error-message="Must be between 6 and 40 chars."></paper-input>
@@ -41,7 +44,7 @@
 			</div>
 			<div class="buttons">
 				<paper-button class="secondary" dialog-dismiss>Cancel</paper-button>
-				<paper-button on-click="_savePassword" class="primary" dialog-confirm disabled="{{saveDisabled}}">Save</paper-button>
+				<paper-button on-click="_savePassword" class="primary" disabled="{{saveDisabled}}">Save</paper-button>
 			</div>
 		</paper-dialog>
 		<paper-toast id="toast" text="{{toastText}}"></paper-toast>
@@ -64,16 +67,14 @@
 		listeners: {
 			'keyup': '_passwordChanged'
 		},
-		toggle: function(){
-			this.$.changePasswordDialog.toggle();
+		open: function(){
+			this.$.changePasswordDialog.open();
 		},
 		_savePassword: function(){
 			if(!this.$.form.validate()){
 				return;
 			}
 			delete this.password.retypedPassword;
-			this.$.savePasswordRequest.body = this.password;
-			this.$.savePasswordRequest.url = util.build('/user/password');
 			this.$.savePasswordRequest.generateRequest();
 			this.password = {};
 		},
@@ -81,14 +82,8 @@
 			this.saveDisabled = !this.$.form.validate();
 		},
 		_onResponse: function(){
+			this.$.changePasswordDialog.close();
 			this.toastText = 'Password successfuly changed.';
-			this.$.toast.show();
-		},
-		_onError: function(e, r){
-			this.toastText = 'An error occured when changing your password.';
-			if(!!r.request.xhr.responseText){
-					 this.toastText = r.request.xhr.responseText;
-			}
 			this.$.toast.show();
 		}
 });
