--- a/app/elements/company/challenge/challenge-create.html
+++ b/app/elements/company/challenge/challenge-create.html
@@ -7,6 +7,9 @@
 <link rel="import" href="../../../bower_components/paper-checkbox/paper-checkbox.html">
 <link rel="import" href="../../../bower_components/iron-ajax/iron-ajax.html">
 
+<link rel="import" href="../../common/coduno-iron-ajax.html">
+<link rel="import" href="../../common/error/errors-display.html">
+
 <dom-module id="challenge-create">
 	<style>
 		:host {
@@ -19,18 +22,18 @@
 		}
 	</style>
 	<template>
-		<iron-ajax
+		<coduno-iron-ajax
 			id="saveChallenge"
 			method="POST"
 			body="{{challenge}}"
-			content-type="application/json"
-			last-response="{{savedChallenge}}"
-			with-credentials="true"
+			suffix="/challenges"
+			response="{{savedChallenge}}"
 			on-response="_onResponse"
-			on-error="_onError">
-		</iron-ajax>
+			error="{{error}}">
+		</coduno-iron-ajax>
 		<div class="mainContent">
 			<paper-material class="card" elevation="1">
+				<errors-display error="{{error}}"></errors-display>
 				<form is="iron-form" id="challengeForm">
 					<paper-input id="name" class="margined" label="Name" value="{{challenge.name}}" required></paper-input>
 					<paper-input id="canonicalName" class="margined" label="Canonical name*" value="{{challenge.canonicalName}}" required></paper-input>
@@ -61,14 +64,10 @@
 					return;
 				}
 				this.challenge.templateId = this.challengeTemplate;
-				this.$.saveChallenge.url = util.build('/challenges');
 				this.$.saveChallenge.generateRequest();
 			},
 			_onResponse: function(){
 				page('/challenges/' + this.savedChallenge);
-			},
-			_onError: function(e){
-				util.error(err);
 			}
 		});
 	</script>
