--- a/app/elements/coder/team/create-team-modal.html
+++ b/app/elements/coder/team/create-team-modal.html
@@ -7,6 +7,9 @@
 <link rel="import" href="../../../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../../../bower_components/iron-form/iron-form.html">
 
+<link rel="import" href="../../common/error/errors-display.html">
+<link rel="import" href="../../common/coduno-iron-ajax.html">
+
 <dom-module id="create-team-modal">
 	<style include="iron-flex">
 		.fieldList {
@@ -17,18 +20,18 @@
 		}
 	</style>
 	<template>
-		<iron-ajax
+		<coduno-iron-ajax
 			id="createTeamRequest"
 			method="POST"
-			handle-as="text"
-			content-type="application/json"
-			with-credentials="true"
-			on-response="_onResponse"
-			on-error="_onError">
-		</iron-ajax>
+			body="{{team}}"
+			suffix="/teams"
+			error="{{error}}"
+			on-response="_onResponse">
+		</coduno-iron-ajax>
 		<paper-dialog id="createTeamDialog" modal>
 			<h4>Create new team</h4>
 			<div class="fieldList">
+				<errors-display error="{{error}}"></errors-display>
 				<form is="iron-form" id="form">
 					<paper-input autofocus="true" label="Name" value="{{team.name}}"
 						required minlength="6" maxlength="40" auto-validate error-message="Must be between 6 and 40 chars."></paper-input>
@@ -41,7 +44,7 @@
 			</div>
 			<div class="buttons">
 				<paper-button class="secondary" dialog-dismiss>Cancel</paper-button>
-				<paper-button on-click="_saveTeam" class="primary" dialog-confirm disabled="{{saveDisabled}}">Save</paper-button>
+				<paper-button on-click="_saveTeam" class="primary" disabled="{{saveDisabled}}">Save</paper-button>
 			</div>
 		</paper-dialog>
 		<paper-toast id="toast" text="{{toastText}}"></paper-toast>
@@ -63,15 +66,13 @@
 			listeners: {
 				'keyup': '_teamChanged'
 			},
-			toggle: function(){
-				this.$.createTeamDialog.toggle();
+			open: function(){
+				this.$.createTeamDialog.open();
 			},
 			_saveTeam: function(){
 				if(!this.$.form.validate()){
 					return;
 				}
-				this.$.createTeamRequest.body = this.team;
-				this.$.createTeamRequest.url = util.build('/teams');
 				this.$.createTeamRequest.generateRequest();
 				this.team = {};
 			},
@@ -79,16 +80,10 @@
 				this.saveDisabled = !this.$.form.validate();
 			},
 			_onResponse: function(){
+				this.$.createTeamDialog.close();
 				this.toastText = 'Team successfully created.';
 				this.$.toast.show();
 				this.fire('team-created');
-			},
-			_onError: function(e, r){
-				this.toastText = 'An error occured when creating your team.';
-				if(!!r.request.xhr.responseText){
-					this.toastText = r.request.xhr.responseText;
-				}
-				this.$.toast.show();
 			}
 		});
 	</script>
