--- a/app/elements/common/settings/settings-page.html
+++ b/app/elements/common/settings/settings-page.html
@@ -3,6 +3,8 @@
 <link rel="import" href="../../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../../bower_components/iron-form/iron-form.html">
 
+<link rel="import" href="../error/errors-display.html">
+
 <dom-module id="settings-page">
 	<style include="iron-flex iron-flex-reverse">
 		.list-item {
@@ -62,9 +64,10 @@
 		}
 	</style>
 	<template>
-		<user-service id="userService" user="{{user}}" connections="{{connections}}"></user-service>
+		<user-service id="userService" user="{{user}}" error="{{error}}" connections="{{connections}}"></user-service>
 		<paper-material id="wrapper" elevation="1" class="card">
 			<div class="mainContent">
+				<errors-display id="errors" error="{{error}}"></errors-display>
 				<form is="iron-form" id="form">
 					<div>
 						<div class="list-item">
@@ -216,7 +219,7 @@
 			this.$.userService.updateMe(this.user);
 		},
 		_showChangePasswordDialog: function(){
-			this.$.changePasswordDialog.toggle();
+			this.$.changePasswordDialog.open();
 		},
 		_getFullName: function(firstName, lastName){
 			var name = '';
