--- a/app/elements/coder/challenge/available/register-to-challenge-dialog.html
+++ b/app/elements/coder/challenge/available/register-to-challenge-dialog.html
@@ -8,6 +8,9 @@
 <link rel="import" href="../../../../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../../../../bower_components/paper-listbox/paper-listbox.html">
 
+<link rel="import" href="../../../common/coduno-iron-ajax.html">
+<link rel="import" href="../../../common/error/errors-display.html">
+
 <dom-module id="register-to-challenge-dialog">
 	<style include="iron-flex iron-flex-reverse">
 		.fieldList {
@@ -28,15 +31,16 @@
 	</style>
 	<template>
 		<my-teams-provider data="{{teams}}"></my-teams-provider>
-		<iron-ajax id="registerRequest"
+		<coduno-iron-ajax 
+			id="registerRequest"
 			method="PUT"
-			handle-as="text"
-			content-type="application/json"
 			with-credentials="true"
-			on-response="_onResponse"
-			on-error="_onError">
-		</iron-ajax>
+		  	path="/challenges/[[challenge.canonicalName]]/register"
+			on-request-finished="_onRequestFinished"
+			error="{{error}}">
+		</coduno-iron-ajax>
 		<paper-dialog id="registerToChallengeModal" class="fieldList" modal>
+			<errors-display error="{{error}}"></errors-display>
 			<h4>Register to <span>{{challenge.name}}</span></h4>
 			<template is="dom-if" if="{{hasTeams}}">
 				<paper-dropdown-menu label="Team" selected-item="{{selectedTeam}}" >
@@ -86,20 +90,13 @@
 			},
 			_register: function(){
 				this.$.registerRequest.body = {team: this.selectedTeam ? this.selectedTeam.value : ''};
-				this.$.registerRequest.url = util.build('/challenges/' + this.challenge.canonicalName + '/register');
 				this.$.registerRequest.generateRequest();
 			},
-			_onResponse: function(){
+			_onRequestFinished: function(e){
+				e.stopPropagation();
 				this.toastText = 'Successfuly registered.';
 				this.$.toast.show();
 				this.fire('challenge-registered');
-			},
-			_onError: function(e, r){
-				this.toastText = 'An error occured when registering this challenge.';
-				if(!!r.request.xhr.responseText){
-					this.toastText = r.request.xhr.responseText;
-				}
-				this.$.toast.show();
 			}
 		});
 	</script>
