--- a/app/elements/common/settings/change-password-dialog.html
+++ b/app/elements/common/settings/change-password-dialog.html
@@ -23,9 +23,9 @@
 		<coduno-iron-ajax
 			id="savePasswordRequest"
 			method="PUT"
-			suffix="/user/password"
+			path="/user/password"
 			body="{{password}}"
-			on-response="_onResponse"
+			on-request-finished="_onResponse"
 			error="{{error}}">
 		</coduno-iron-ajax>
 		<match-password other-password="[[password.newPassword]]" validator-name="match-password-validator"></match-password>
@@ -81,7 +81,8 @@
 		_passwordChanged: function(){
 			this.saveDisabled = !this.$.form.validate();
 		},
-		_onResponse: function(){
+		_onResponse: function(e){
+			e.stopPropagation();
 			this.$.changePasswordDialog.close();
 			this.toastText = 'Password successfuly changed.';
 			this.$.toast.show();
