--- a/app/elements/company/challenge/challenge-create.html
+++ b/app/elements/company/challenge/challenge-create.html
@@ -26,9 +26,9 @@
 			id="saveChallenge"
 			method="POST"
 			body="{{challenge}}"
-			suffix="/challenges"
+			path="/challenges"
 			response="{{savedChallenge}}"
-			on-response="_onResponse"
+			on-request-finished="_onResponse"
 			error="{{error}}">
 		</coduno-iron-ajax>
 		<div class="mainContent">
