--- a/app/elements/coder/code-editor/consoles/test-stats-console.html
+++ b/app/elements/coder/code-editor/consoles/test-stats-console.html
@@ -1,6 +1,9 @@
 <link rel="import" href="test-stats-element.html">
 <link rel="import" href="../../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
+<link rel="import" href="../../../common/data-providers/test/tests-by-task-provider.html">
+<link rel="import" href="../../../common/error/errors-display.html">
+
 <dom-module id="test-stats-console">
 	<style include="iron-flex">
 		:host{
@@ -20,16 +23,16 @@
 		}
 	</style>
 	<template>
-		<iron-ajax
-			id="getTestsRequest"
-			handle-as="json"
-			on-response="onTestsResponse"
-			on-error="onTestsError"
-			method="GET"
-			with-credentials="true"
-			>
-		</iron-ajax>
+		<tests-by-task-provider
+			id="testsProvider"
+			task="{{task}}"
+			data="{{tests}}"
+			error="{{error}}"
+			on-request-failed="onTestsError">
+		</tests-by-task-provider>
+
 		<div id="consoleWrapper" style$="{{style}}">
+			<errors-display error="{{error}}"></errors-display>
 			<p>{{stderr}}</p>
 			<div id="data" style$="{{dataStyle}}">
 			</div>
@@ -57,7 +60,8 @@
 					value: false
 				},
 				tests: {
-					type: Array
+					type: Array,
+					observer: 'testsChanged'
 				},
 				dataStyle: {
 					type: String
@@ -86,8 +90,6 @@
 			},
 			_afterPropertiesSet: function(){
 				this.testStats = {};
-				this.$.getTestsRequest.url = util.build('/tasks/' + this.task.id + '/tests');
-				this.$.getTestsRequest.generateRequest();
 			},
 			setOutput: function(result){
 				if(result.test){
@@ -145,15 +147,10 @@
 				this.$.data.appendChild(element);
 				this.counter ++;
 			},
-			onTestsResponse: function(r){
-				var data = r.detail.response;
-				this.tests = data;
-				for(var i=0;i<data.length;i++){
-					this.initTestElement(data[i].id);
+			testsChanged: function(){
+				for(var i=0;i<this.tests.length;i++){
+					this.initTestElement(this.tests[i].id);
 				}
-			},
-			onTestsError: function(err){
-				util.error(err);
 			},
 			show: function(){
 				this.style = '';
