--- a/app/elements/coder/team/user-team-invitations-table.html
+++ b/app/elements/coder/team/user-team-invitations-table.html
@@ -5,6 +5,8 @@
 <link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../../bower_components/iron-ajax/iron-ajax.html">
 
+<link rel="import" href="../../common/coduno-iron-ajax.html">
+
 
 <dom-module id="user-team-invitations-table">
 	<style include="iron-flex">
@@ -17,15 +19,12 @@
 		}
 	</style>
 	<template>
-		<iron-ajax
+		<coduno-iron-ajax
 			id="request"
 			method="POST"
-			handle-as="text"
-			content-type="application/json"
-			with-credentials="true"
-			on-response="_onResponse"
-			on-error="_onError">
-		</iron-ajax>
+			on-request-finished="_onResponse"
+			on-request-failed="_onError">
+		</coduno-iron-ajax>
 		<my-team-invitations-provider data="{{invitations}}"></my-team-invitations-provider>
 		<vaadin-grid id="invitationsGrid" class="fullHeight" items="[[invitations]]">
 			<table>
@@ -69,11 +68,11 @@
 				};
 			},
 			_acceptInvitation: function(team){
-				this.$.request.url = util.build('/teams/' + team.canonicalName + '/invitation/accept');
+				this.$.request.path = '/teams/' + team.canonicalName + '/invitation/accept';
 				this.$.request.generateRequest();
 			},
 			_declineInvitation: function(team){
-				this.$.request.url = util.build('/teams/' + team.canonicalName + '/invitation/decline');
+				this.$.request.path = '/teams/' + team.canonicalName + '/invitation/decline';
 				this.$.request.generateRequest();
 			},
 			_createIconButton: function(icon, clickListener){
@@ -86,10 +85,10 @@
 				this.fire('invitation-accepted');
 				this.$$('my-team-invitations-provider').refresh();
 			},
-			_onError: function(e, r){
+			_onError: function(e, d){
 				this.toastText = 'An error occured when processing your request.';
-				if(!!r.request.xhr.responseText){
-					this.toastText = r.request.xhr.responseText;
+				if(!!this.$.request.error){
+					this.toastText = this.$.error.message;
 				}
 				this.$.toast.show();
 			}
