--- a/app/elements/common/data-providers/challenge/participation/participants-by-challenge-canonical-name-provider.html
+++ b/app/elements/common/data-providers/challenge/participation/participants-by-challenge-canonical-name-provider.html
@@ -10,8 +10,8 @@
 			method="GET"
 			url="[[baseUrl]]/challenges/[[canonicalName]]/participants"
 			handle-as="json"
-			last-response="{{data}}"
-			with-credentials="true">
+			with-credentials="true"
+			bubbles>
 		</iron-ajax>
 	</template>
 	<script type="application/javascript" src="../../../../../scripts/behaviors/providers/general-provider-behavior.js"></script>
