--- a/app/elements/common/data-providers/team/invitation/my-team-invitations-provider.html
+++ b/app/elements/common/data-providers/team/invitation/my-team-invitations-provider.html
@@ -13,8 +13,8 @@
 			method="GET"
 			url="[[baseUrl]]/user/teams/invitations"
 			handle-as="json"
-			last-response="{{data}}"
-			with-credentials="true">
+			with-credentials="true"
+			bubbles>
 		</iron-ajax>
 	</template>
 	<script type="application/javascript" src="../../../../../scripts/behaviors/providers/general-provider-behavior.js"></script>
