--- a/app/elements/common/data-providers/team/teams-for-user-provider.html
+++ b/app/elements/common/data-providers/team/teams-for-user-provider.html
@@ -12,8 +12,8 @@
 			method="GET"
 			url="[[baseUrl]]/users/[[username]]/teams"
 			handle-as="json"
-			last-response="{{data}}"
-			with-credentials="true">
+			with-credentials="true"
+			bubbles>
 		</iron-ajax>
 	</template>
 	<script type="application/javascript" src="../../../../scripts/behaviors/providers/general-provider-behavior.js"></script>
