--- a/app/elements/company/challenge-template/challenge-template-modal.html
+++ b/app/elements/company/challenge-template/challenge-template-modal.html
@@ -5,6 +5,9 @@
 <link rel="import" href="../../../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../../../bower_components/paper-menu/paper-menu.html">
 
+<link rel="import" href="../../common/coduno-iron-ajax.html">
+<link rel="import" href="../../common/error/errors-display.html">
+
 <dom-module id="challenge-template-modal">
 	<style>
 		:host {
@@ -25,19 +28,19 @@
 		}
 	</style>
 	<template>
-		<iron-ajax
+		<coduno-iron-ajax
 			id="saveChallengeTemplate"
 			method="POST"
 			body="{{challengeTemplateToSave}}"
-			content-type="application/json"
-			last-response="{{savedChallengeTemplate}}"
-			with-credentials="true"
-			on-response="_onResponse"
-			on-error="_onError">
-		</iron-ajax>
+			response="{{savedChallengeTemplate}}"
+			error="{{error}}"
+			on-request-finished="_onResponse"
+			on-request-failed="_onError">
+		</coduno-iron-ajax>
 		<endpoints-provider data="{{endpoints}}"></endpoints-provider>
 
 		<paper-dialog id="dialog" modal>
+			<errors-display error="{{error}}"></errors-display>
 			<h2>These are the tasks you selected: </h2>
 			<template is="dom-repeat" items="{{selectedTasks}}" as="selectedTask">
 				<div><span>{{_computeIndex(index)}}</span> <span>{{selectedTask.Assignment.Name}}</span></div>
