Refactor request-related behaviors  * add base request behavior containing the base url  * add general request handler behavior which handles responses and errors  * replace remaining not-deprecated iron-ajaxes with requests which handle responses and errors appropriately

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -76,6 +76,7 @@
 <link rel="import" href="common/coduno-iron-ajax.html">
 
 <link rel="import" href="common/error/error-page.html">
+<link rel="import" href="common/error/errors-display.html">
 
 <link rel="import" href="common/data-providers/challenge/challenges-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/challenge-by-canonical-name-provider.html"/>
@@ -97,6 +98,7 @@
 <link rel="import" href="common/data-providers/team/team-by-canonical-name-provider.html">
 <link rel="import" href="common/data-providers/team/teams-for-user-provider.html">
 <link rel="import" href="common/data-providers/team/invitation/my-team-invitations-provider.html">
+<link rel="import" href="common/data-providers/test/tests-by-task-provider.html">
 
 <link rel="import" href="common/datepicker/date-time-picker.html">
 
