--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -40,6 +40,10 @@
 <link rel="import" href="coder/challenge/page/endpoints/sequential-challenge.html">
 <link rel="import" href="coder/challenge/page/endpoints/ccc-challenge.html">
 
+<link rel="import" href="coder/challenge/register-wizard/challenge-info-step.html">
+<link rel="import" href="coder/challenge/register-wizard/challenge-register-wizard.html">
+<link rel="import" href="coder/challenge/register-wizard/challenge-register-step.html">
+
 <link rel="import" href="coder/challenge/page/ccc/ccc-nav.html">
 <link rel="import" href="coder/challenge/page/ccc/nav-level-element.html">
 
