--- a/app/elements/common/settings/settings-page.html
+++ b/app/elements/common/settings/settings-page.html
@@ -62,7 +62,7 @@
 						</div>
 						<div class="aligned-item">
 							<p>Your public username is the same as your profile address</p>
-							<p><a href="https://app.cod.uno/#!/u/[[user.username]]">https://app.cod.uno/#!/u/<span>[[user.username]]</span></a></p>
+							<p><a href="https://app.cod.uno/u/[[user.username]]">https://app.cod.uno/u/<span>[[user.username]]</span></a></p>
 						</div>
 					</div>
 					<div>
