--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
 	<!-- endbuild -->
 
 	<link rel="import" href="elements/elements.html">
+	<link rel="stylesheet" href="fonts/fonts.css">
 	<link rel="stylesheet" href="styles/coduno.css">
 	<link rel="stylesheet" href="styles/main.css">
 </head>
