Fix countdown format and fix login step in register wizard (#263)

--- a/app/elements/coder/challenge/countdown-timer.html
+++ b/app/elements/coder/challenge/countdown-timer.html
@@ -28,7 +28,21 @@
 				}
 			},
 			_formatDuration: function() {
-				this.formatedDuration = util.getFormatedTime(this.duration);
+				this.formatedDuration = this.getFormatedTime(this.duration);
+			},
+			getFormatedTime: function(d) {
+				var w = Math.floor(d / 604800);
+				var days = Math.floor(d / 86400) % 7;
+				var h = Math.floor(d / 3600) % 24;
+				var m = Math.floor(d / 60 % 60);
+				var s = Math.floor(d % 60);
+				var time = ('0' + h).slice(-2) + ' hours, ' + ('0' + m).slice(-2) + ' minutes, ' + ('0' + s).slice(-2) + ' seconds';
+				if (days === 0 && w === 0){
+					return time;
+				}
+				time = days > 0 ? days + ' days, ' + time : time;
+				time = w > 0 ? days > 0 ? w + ' weeks, ' + time : w + ' weeks ' + time : time;
+				return time;
 			},
 			start: function() {
 				if (this.duration <= 0) {
